@@ -6,8 +6,6 @@ import com.bigsmo.common.dto.LogBatchRequest;
 import com.bigsmo.controller.service.LogIngestService;
 import com.bigsmo.controller.service.TokenValidator;
 
-import io.micrometer.core.instrument.MeterRegistry;
-import io.micrometer.core.instrument.Timer;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -15,10 +13,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import tools.jackson.databind.ObjectMapper;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -28,13 +26,13 @@ public class LogIngestController {
 
     private final TokenValidator tokenValidator;
     private final LogIngestService logIngestService;
+    private final ObjectMapper objectMapper;
 
     @PostMapping("/batch")
     public ResponseEntity<?> ingestBatch(
             @RequestHeader(value = "Authorization", required = false) String authHeader,
             @Valid @RequestBody LogBatchRequest request,
             HttpServletRequest httpRequest) {
-
         String clientIp = httpRequest.getRemoteAddr();
 
         // 1. Проверка токена
@@ -46,11 +44,12 @@ public class LogIngestController {
         try {
             // 2. делаем строки из классов !напрягает
             List<String> backToString = request.getLogs().stream()
-                    .map(IncomingLogDto::toString)
-                    .collect(Collectors.toList());
+                    .map(this::toJson)
+                    .toList();
 
             // 3. Запись в raw-logs topic
             LogIngestService.IngestResult result = logIngestService.ingest(backToString);
+            log.info("the thing ingested: {}", result.toString());
 
             BatchResponse response = BatchResponse.builder()
                     .status(result.accepted() > 0 ? "accepted" : "rejected")
@@ -70,5 +69,9 @@ public class LogIngestController {
     @GetMapping("/health")
     public ResponseEntity<Map<String, String>> health() {
         return ResponseEntity.ok(Map.of("status", "UP", "component", "log-ingest-api"));
+    }
+
+    private String toJson(IncomingLogDto dto) {
+        return objectMapper.writeValueAsString(dto);
     }
 }
